block with gradient backgraund

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 <html lang="en">
 <!-- Заголовок страницы, контейнер для других важных данных (не отображается) -->
 <head>
+    <!-- Импорт шрифта Mulish -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <!-- импорт шрифта DM Sans -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap"rel="stylesheet">
     <!-- Ссылка на наш сss (cascading style sheet) файл -->
     <link rel="stylesheet" href="css/style.css">
     <!-- кодировка страницы -->
@@ -14,10 +23,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Заголовок страницы в браузере -->
-    <title>Знакомство с HTML-тегами. Часть №3 (Формы)</title>
+    <title>Verso</title>
 </head>
 <!-- Отображаемое тело страницы -->
 <body>
+    <!-- part with gradient background -->
+    <div class="top-block">
+        
+        <div class="head_items">
+            <img src="img/VERS.svg" alt="">
+            <img src="img/Rectangle 18 (Stroke).svg" alt="">
+            <span class="head_item1">Home</span>
+            <span class="head_item2">Why Verso</span>
+            <span class="head_item2">Team</span>
+            <span class="head_item2">Roadmap</span>
+            <span class="head_item2">Blog</span>
+            <span class="head_item2">Whitepaper</span>
+            <span class="head_item3">Buy $VSO</span>
+        </div>
+        <div>
+            <h1>How to buy VSO</h1>
+            <p class="verso_link">Verso(VSO) is currently available on <a class="gate_link"  target="_blank" href="https://www.gate.io/ru">Gate.io</a> as well as on several decentralized exchanges(DEX) connected to the
+            Avalanche blockchain.</p>
+        </div>
+        <div class="listings">
+         <p class="listing">
+            <span>CEX Listings</span>
+            <span>DEX Listings</span>
+         </p>
+         <p >
+            <p class="block_painting1"></p>
+            <p class="block_painting2"></p>
+            <p class="block_painting3"></p>
+            <p class="block_painting4"></p>
+         </p>
+        </div>
+
+
+    <div>
+    
+
+
 
 </body>
 </html>
