--- a/index.html
+++ b/index.html
@@ -50,20 +50,16 @@
          <p class="listing">
             <span>CEX Listings</span>
             <span>DEX Listings</span>
+            
          </p>
          <p >
             <p class="block_painting1"></p>
-            <p class="block_painting2"></p>
-            <p class="block_painting3"></p>
+            <p class="block_painting2"></p><br>
+            <p class="block_painting3"></p><br>
             <p class="block_painting4"></p>
          </p>
+         <p class="ref_guide">If you’re new to Avalache, we suggest you also to check out our <span>Reference Guide</span><a href="#"> &#12297;</a></p>
         </div>
-
-
     <div>
-    
-
-
-
 </body>
 </html>
