--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
                 <p class="block_painting4"></p>
             </p>
             <p class="ref_guide">If you’re new to Avalache, we suggest you also to check out our <span>Reference Guide</span><a href="#"> &#12297;</a></p>
+            <div class="box_yellow">
+                <img src="img/Vector 6-yellow.svg" >
+                <img src="img/Vector 4-yellow.svg" >
+                <img src="img/Vector 5-yellow.svg" >
+            </div>
+                <div class="box_yellow">
+                <img src="img/Vector 6-yellow.svg">
+                <img src="img/Vector 4-yellow.svg">
+                <img src="img/Vector 5-yellow.svg">
+            </div>
         <div>
     </div>
 
