--- a/index.html
+++ b/index.html
@@ -62,11 +62,20 @@
                 <img src="img/Vector 4-yellow.svg" >
                 <img src="img/Vector 5-yellow.svg" >
             </div>
-                <div class="box_yellow">
-                <img src="img/Vector 6-yellow.svg">
-                <img src="img/Vector 4-yellow.svg">
-                <img src="img/Vector 5-yellow.svg">
+            <div class="box_gray">
+                <img src="img/Vector 6-gray.svg">
+                <img src="img/Vector 5-gray.svg">
+                <img src="img/Vector 4-gray.svg">
             </div>
+            <div class="box_purle">
+                <img src="img/Vector 6-purle.png">
+                <img src="img/Vector 5-purle.svg">
+                <img src="img/Vector 4-purle.svg">
+            </div>
+            <div class="box_green">
+                <img src="img/box - green.svg" alt="">
+            </div>
+            
         <div>
     </div>
 
@@ -74,7 +83,9 @@
         <h2>How to add VSO to Metamask</h2>
         <img class="screen-1" src="img/Screen1.svg" alt="">
         <img class="screen-2" src="img/Screen2.svg" alt="">
-
     </div>
+
+
+   
 </body>
 </html>
