--- a/index.html
+++ b/index.html
@@ -188,24 +188,24 @@
         </div>
         <div class="services">
             <p>Services:</p>
-            <p>Lorem Ipsum</p>
-            <p>Lorem Ipsum</p>
-            <p>Lorem Ipsum</p>
-            <p>Lorem Ipsum</p>
+            <p><a href="#" target="_blank">Lorem Ipsum</a></p>
+            <p><a href="#" target="_blank">Lorem Ipsum</a></p>
+            <p><a href="#" target="_blank">Lorem Ipsum</a></p>
+            <p><a href="#" target="_blank">Lorem Ipsum</a></p>
         </div>
         <div class="about">
             <p>About:</p>
-            <p>Lorem Ipsum</p>
-            <p>Lorem Ipsum</p>
-            <p>Lorem Ipsum</p>
-            <p>Lorem Ipsum</p>
+            <p><a href="#" target="_blank">Lorem Ipsum</a></p>
+            <p><a href="#" target="_blank">Lorem Ipsum</a></p>
+            <p><a href="#" target="_blank">Lorem Ipsum</a></p>
+            <p><a href="#" target="_blank">Lorem Ipsum</a></p>
         </div>
         <br>
 
         <div class="images">
-            <img src="img/001-facebook.svg" width="8" height="16">
-            <img src="img/003-twitter.svg" width="20" height="16">
-            <img src="img/004-instagram.svg" width="16" height="16">
+            <a href="#"><img src="img/001-facebook.svg" width="8" height="16"></a>
+            <a href="#"><img src="img/003-twitter.svg" width="20" height="16"></a>
+            <a href="#"><img src="img/004-instagram.svg" width="16" height="16"></a>
         </div>
 
         <p class="last-text-1">
@@ -220,8 +220,6 @@
             <img src="img/Back to top.svg">
         </a>
 
-        <br>
-        <br>
 
     </div>
 
